# climate-trends-spain

./: .coveragerc  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
analisis/: index.html
analysis/: index.html
data/results/: unified_streamlit_data.parquet
docs/: analisis.md  analysis.md  index.md
search/: search_index.json
src/weather/: analysis.py  cleaning.py  config.py  data_loader.py  main.py  viz.py
streamlit_app/: Home.py
streamlit_app/.streamlit/: config.toml
streamlit_app/assets/: style.css
streamlit_app/components/: charts.py  filters.py  metrics.py
streamlit_app/pages/: 1_Dashboard_General.py  2_Tendencias_y_Aceleracion.py  3_Extremos_y_Percentiles.py  4_Analisis_Estacional.py  5_Analisis_Espacial.py  6_Calidad_y_Eficiencia_Big_Data.py  7_Metodologia_y_Matematicas.py  8_Descarga_Datos.py
streamlit_app/utils/: __init__.py  data_loader.py  styling.py
tests/: test_acceleration.py  test_cleaning.py  test_data_loader.py  test_stats.py  test_viz.py
