[project]
name = "proyecto-meteorologia"
version = "0.1.0"
description = "Análisis de datos meteorológicos — Big Data"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Sergio Minguez Cruces"}]

dependencies = [
       "pandas>=2.0",
       "numpy>=1.24",
       "matplotlib>=3.7",
       "seaborn>=0.12",
       "requests>=2.31",
       "meteostat>=1.6",
       "scipy>=1.10",
       "pymannkendall>=1.4",
       "folium>=0.14",
       "statsmodels>=0.14",
       "tqdm>=4.65",
       "pyarrow>=13.0",
       "streamlit>=1.56.0",
       "plotly>=6.7.0",
       "ruff>=0.15.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  UP: pyupgrade
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line-too-long — handled by the formatter

[tool.ruff.format]
quote-style = "double"
